# kiban

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  NEXT_SESSION_PROMPT.md  README.md  defaults.yml  install.sh  pyproject.toml
.github/workflows/: release.yml
docs/: DISTRIBUTION.md
docs/design/: README.md
evals/: README.md  __init__.py  cassettes.py  runner.py
evals/cassettes/: _clean_control.json  _clean_control_mlx.json  mojo___clean_control_mojo.json  mojo__needless_copy.json  mojo__oob_simd_store.json  mojo__pub_signature_break_mojo.json  mojo__quant_overflow.json  rust___clean_control_rust.json  rust__clone_in_hot_loop.json  rust__mutex_across_await.json  rust__ownership_unsound_unsafe.json  rust__pub_signature_break.json  rust__unwrap_on_prod_path.json  squish__api_contract_break.json  squish__concurrency_race.json  squish__dtype_promotion.json  squish__memory_bandwidth_copy.json  (+4 more)
ledger/: __init__.py  engine.py  schema.md
lib/: __init__.py  bench_squish.py  confirm.py  context_budget.py  diff_scope.py  headless.py  jsonl_store.py  learnings.py  newonly.py  oneway.py  prose_lint.py  prove.py  redact.py  review.py  review_log.py  self_update.sh  specialist_stats.py  unsafe_budget.py
lib/packs/: __init__.py
profiles/: _schema.yml  _template.yml  mojo_example.yml  squish.yml  ts_example.yml  vectro.yml
templates/: repo-CLAUDE.md  repo-ci.yml
tests/: test_bench_squish.py  test_cassettes.py  test_confirm.py  test_context_budget.py  test_headless.py  test_hooks_killtest.sh  test_jsonl_store.py  test_konjo_gates.py  test_konjo_gates_killtest.sh  test_learnings.py  test_learnings_killtest.sh  test_ledger.py  test_longrun.py  test_longrun_killtest.sh  test_newonly.py  test_oneway.py  test_oneway_killtest.sh  test_packs.py  test_prose_lint.py  test_prove.py  test_prove_killtest.sh  test_redact.py  test_redact_scan.py  test_review.py  test_review_log_stats.py  test_self_update.sh  test_unsafe_budget.py
(+56 files in other folders)
